testsuite/tests/explicit-dicts/should_fail/Roles5.stderr

Roles5.hs:14:6: error:
    • Explicit dictionary application to: ‘Ord Int’
      is not allowed because the instance incoherence check
      requires type-variable arguments
    • In the expression:
        (undefined :: Ord Int => Int -> Set Int -> Set Int)
          ((reverseOrd @Int :: Ord Int))
      In an equation for ‘f5’:
          f5
            = (undefined :: Ord Int => Int -> Set Int -> Set Int)
                ((reverseOrd @Int :: Ord Int))
